# transmit_asio

./: CMakeLists.txt  README.md  readme.md
cmake/: transmitConfig.cmake.in
config/: plugins.yaml
examples/: CMakeLists.txt  test_client.cpp  test_server.cpp
include/: client.h  handle_method.h  server.h  session.h  type.h
include/factory/: base_plugin.h  base_plugin_factory.h  export_macro.h  plugin_factory.h
include/factory/plugins/: init_write.h  plc_transmist.h
include/proto/: message.proto
msg/: CMakeLists.txt
msg/message/: message.proto
msg/plugins/: plc.proto
plugins/: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  handle_method.cpp  server.cpp  session.cpp
src/factory/: CMakeLists.txt  plugin_factory.cpp
src/factory/plugins/: init_write.cpp  plc_transmist.cpp
test/: CMakeLists.txt  test_client.cpp  test_server.cpp
